--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -1237,6 +1237,12 @@
     <string name="please_use_the_roman_alphabet">Please use the Roman alphabet</string>
     <!-- Label to show user when they use unsupported characters in their email -->
     <string name="please_enter_a_valid_email_address">Please enter a valid email address</string>
+    <!-- Row header for when we show Resort Fees as its own line item -->
+    <string name="resort_fees">Resort fees:</string>
+    <!-- Row header for when the grand total of the user's hotel stay is more than what they owe Expedia at the time of reservation-->
+    <string name="due_to_expedia_today">Due to Expedia today:</string>
+    <!-- Legal disclaimer for resort fees (at bottom of checkout) -->
+    <string name="resort_fee_disclaimer_TEMPLATE">The &lt;b&gt;%1$s&lt;/b&gt; resort fee will be collected at the hotel. The grand total for your stay will be &lt;b&gt;%2$s&lt;/b&gt;.</string>
 
     <!-- Tablet Checkout Activity -->
     <!-- Travelers -->
@@ -2039,6 +2045,8 @@
     <string name="free_cancellation">Free Cancellation</string>
     <!-- This fee is not included in the total -->
     <string name="fee_not_included_in_total">These fees are not included in the total</string>
+    <!-- This fee will be collected by hotel at time of stay -->
+    <string name="fees_collected_by_hotel">These fees will be collected by the hotel.</string>
     <!-- Renovation Notice -->
     <string name="renovation_notice">Renovation Notice</string>
     <!-- This property is undergoing renovations -->
