3547 / 3585: Air attach messaging in itins for tablet, phone
Given that a user has a gap btwn two flights with no hotel in destination,
or has a standalone flight with at least a day until the next itinerary item,
AND qualifies for air attach, show air attach messaging. If all checks
besides air attach apply, show hotel attach messaging. Show for every
qualifying itinerary item.

On phone, clicking air attach / hotel attach button launches a hotel search
in the flight destination city. Currently showing a toast in response to
button click on tablet; waiting for hotel search deeplinking story.

--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -597,6 +597,9 @@
     <string name="add_hotel_TEMPLATE">Add a hotel in %1$s</string>
     <!-- Button label to search for a hotel in the flight destination city. Used only when we don't know the destination city. -->
     <string name="add_hotel_fallback">Add a hotel at your destination</string>
+    <!-- Button label to add a hotel in the air attach case. -->
+    <string name="add_hotel_air_attach">Add a hotel</string>
+
 
     <!-- Itin Local Expert.  Do not translate the "Local Expert" part because it is the title of a product. -->
     <string name="talk_to_local_expert">Talk to a Local Expert</string>
