--- a/project/src/main/res/values-pt-rBR/strings.xml
+++ b/project/src/main/res/values-pt-rBR/strings.xml
@@ -2046,7 +2046,7 @@
     <string name="taxes_and_fees">Impostos e taxas</string>
     <!-- Label indicating that the taxes and fees are included in the price for a hotel room booking -->
     <string name="included">Incluídos</string>
-    <!-- Label for the "Mandatory Fees" (bait & switch fees) -->
+    <!-- Label for the "Mandatory Fees" -->
     <string name="MandatoryFees">Tarifas do hotel (pagas no hotel)</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">Desconto</string>
