Remove "bait & switch" from our codebase.
We do not, nor have we ever, baited & switched our users,
Words have meaning. Be mindful of that.

--- a/project/src/main/res/values-es/strings.xml
+++ b/project/src/main/res/values-es/strings.xml
@@ -2047,7 +2047,7 @@
     <string name="taxes_and_fees">Impuestos y cargos</string>
     <!-- Label indicating that the taxes and fees are included in the price for a hotel room booking -->
     <string name="included">Incluidos</string>
-    <!-- Label for the "Mandatory Fees" (bait & switch fees) -->
+    <!-- Label for the "Mandatory Fees" -->
     <string name="MandatoryFees">Cargos del hotel (a pagar al hotel)</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">Descuento</string>
