--- a/project/src/main/res/values-sv/strings.xml
+++ b/project/src/main/res/values-sv/strings.xml
@@ -2047,7 +2047,7 @@
     <string name="taxes_and_fees">Skatter och avgifter</string>
     <!-- Label indicating that the taxes and fees are included in the price for a hotel room booking -->
     <string name="included">Inkluderas</string>
-    <!-- Label for the "Mandatory Fees" (bait & switch fees) -->
+    <!-- Label for the "Mandatory Fees" -->
     <string name="MandatoryFees">Hotellavgifter (betalas på hotellet)</string>
     <!-- Label to display the amount you save after applying a coupon code in the receipt -->
     <string name="discount">Rabatt</string>
