--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -1263,6 +1263,14 @@
     <string name="enter_traveler_info">Traveler Information</string>
     <!-- Traveler Details (for flights) -->
     <string name="traveler_details">Main traveler details</string>
+    <!-- Saved button for traveler/payment -->
+    <string name="saved_button">Saved</string>
+    <!-- Edit button for traveler/payment -->
+    <string name="edit_button">Edit</string>
+    <!-- Select traveler/contact from checkout saved travelers list -->
+    <string name="select_traveler">Select Contact</string>
+    <!-- Add new traveler, checkout saved travelers list -->
+    <string name="add_new_traveler">Add New Traveler</string>
     <!-- Add Guest for hotels -->
     <string name="guest_details">Guest details</string>
     <!-- Add adult traveler number template -->
