--- a/project/src/main/res/values-ja/strings.xml
+++ b/project/src/main/res/values-ja/strings.xml
@@ -1631,6 +1631,7 @@
     <string name="share_flight_section_outbound">往路 (行き) :</string>
     <!-- Header for the return flight details section of the share flight email -->
     <string name="share_flight_section_return">復路 (帰り) :</string>
+    <string name="app_name">Expedia</string>
 
     <!-- Search Fragment -->
     <!-- Label for picking checkin/checkout dates -->
