--- a/project/src/main/res/values-vi/strings.xml
+++ b/project/src/main/res/values-vi/strings.xml
@@ -1631,6 +1631,7 @@
     <string name="share_flight_section_outbound">Chuyến bay đi:</string>
     <!-- Header for the return flight details section of the share flight email -->
     <string name="share_flight_section_return">Trở về:</string>
+    <string name="app_name">Expedia</string>
 
     <!-- Search Fragment -->
     <!-- Label for picking checkin/checkout dates -->
