--- a/project/src/main/res/values-zh-rHK/strings.xml
+++ b/project/src/main/res/values-zh-rHK/strings.xml
@@ -1631,6 +1631,7 @@
     <string name="share_flight_section_outbound">出發航班：</string>
     <!-- Header for the return flight details section of the share flight email -->
     <string name="share_flight_section_return">回程航班：</string>
+    <string name="app_name">Expedia</string>
 
     <!-- Search Fragment -->
     <!-- Label for picking checkin/checkout dates -->
