--- a/project/src/voyages/res/values-fr/strings.xml
+++ b/project/src/voyages/res/values-fr/strings.xml
@@ -166,6 +166,8 @@
     <!-- 1: Hotel name, 2: Formatted length of stay -->
     <string name="share_template_long_hotel_1_greeting">Merci d’avoir choisi l’application Hôtel Voyages-sncf! Votre réservation est confirmée : %1$s, pendant %2$s.</string>
     <!-- App download link -->
-    <string name="share_template_long_ad">A bientôt sur notre application. Voyages-sncf vous souhaite un bon voyage.</string>
+    <string name="share_template_long_ad_vsc">A bientôt sur notre application. Voyages-sncf vous souhaite un bon voyage.</string>
+    <!-- VSC Itinerary -->
+    <string name="vsc_itinerary">N° de voyage VSC</string>
 
 </resources>
