--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -3041,4 +3041,7 @@
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">Book hotels, flights and view &amp; share your itineraries. Download the free Travelocity mobile app today.\n%s</string>
 
+    <!-- Mail intent chooser dialog title -->
+    <string name="mailto_title">Send email...</string>
+
 </resources>
