--- a/project/src/travelocity/res/values/strings.xml
+++ b/project/src/travelocity/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="contact_travelocity">Contact Travelocity</string>
     <string name="travelocity_website">Travelocity Website</string>
     <string name="travelocity_app_support">Travelocity App Support</string>
-    <string name="travelocity_copyright">© Copyright 2012-2014 Travelocity\nAll rights reserved.</string>
+    <string name="travelocity_copyright_TEMPLATE">© Copyright 2012-%1$s Travelocity\nAll rights reserved.</string>
     <string name="travelocity_info_url">http://www.travelocity.com/</string>
 
     <!-- Label for logout confirmation -->
