--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -1271,6 +1271,10 @@
     <string name="select_traveler">Select Contact</string>
     <!-- Add new traveler, checkout saved travelers list -->
     <string name="add_new_traveler">Add New Traveler</string>
+    <!-- Select card from checkout saved credit cards list -->
+    <string name="saved_creditcards">Saved Cards</string>
+    <!-- Add new card, checkout saved credit cards list -->
+    <string name="add_new_creditcard">Add New Card</string>
     <!-- Add Guest for hotels -->
     <string name="guest_details">Guest details</string>
     <!-- Add adult traveler number template -->
