--- a/project/src/main/res/values-de/strings.xml
+++ b/project/src/main/res/values-de/strings.xml
@@ -3021,5 +3021,12 @@
 
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">Sie möchten Hotels und Flüge buchen und Ihre Reisepläne einsehen und teilen? Dann laden Sie noch heute die kostenlose Travelocity-App herunter.\n%s</string>
+    <string name="fees_paid_at_hotel">Im Hotel fällige Gebühren:</string>
+    <string name="total_due_to_expedia_today">Heute bei Expedia fälliger Betrag:</string>
+    <string name="hotel_fees_for_this_stay">Hotelgebühren für diesen Aufenthalt</string>
+    <string name="included_in_the_price">Im Preis inbegriffen</string>
+    <string name="not_included_in_the_price">Nicht im Preis inbegriffen</string>
+    <string name="tablet_room_rate_resort_fees_included_template">Hotelgebühren für diesen Aufenthalt (inbegriffen): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="tablet_room_rate_resort_fees_not_included_template">Hotelgebühren für diesen Aufenthalt (nicht inbegriffen): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
 
 </resources>
