--- a/project/src/main/res/values-en-rCA/strings.xml
+++ b/project/src/main/res/values-en-rCA/strings.xml
@@ -4,4 +4,5 @@
     <string name="address_state_hint">Prov.</string>
     <!-- Zip code hint -->
     <string name="address_postal_code_hint">Postal Code</string>
+    <string name="fees_paid_at_hotel"></string>
 </resources>
