--- a/project/src/main/res/values-es-rES/strings.xml
+++ b/project/src/main/res/values-es-rES/strings.xml
@@ -3020,5 +3020,12 @@
 
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">Reserva hoteles y vuelos, y visualiza y comparte tus itinerarios Descarga la aplicación gratuita de Travelocity hoy.\n%s</string>
+    <string name="fees_paid_at_hotel">Tasas de pago directo en el hotel:</string>
+    <string name="total_due_to_expedia_today">Total a pagar a Expedia hoy:</string>
+    <string name="hotel_fees_for_this_stay">Tasas del hotel para esta estancia:</string>
+    <string name="included_in_the_price">Incluidas en el precio</string>
+    <string name="not_included_in_the_price">No incluidas en el precio</string>
+    <string name="tablet_room_rate_resort_fees_included_template">Tasas del hotel para esta estancia (incluidas): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="tablet_room_rate_resort_fees_not_included_template">Tasas del hotel para esta estancia (no incluidas): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
 
 </resources>
