--- a/project/src/main/res/values-ko/strings.xml
+++ b/project/src/main/res/values-ko/strings.xml
@@ -3020,5 +3020,12 @@
 
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">호텔과 항공을 예약하고 일정을 확인 및 공유하세요. 오늘 바로 무료 Travelocity 모바일 앱을 다운로드하세요.\n%s</string>
+    <string name="fees_paid_at_hotel">호텔에서 결제하는 수수료:</string>
+    <string name="total_due_to_expedia_today">오늘 익스피디아에 결제할 총 금액:</string>
+    <string name="hotel_fees_for_this_stay">이번 숙박 호텔 수수료</string>
+    <string name="included_in_the_price">요금에 포함됨</string>
+    <string name="not_included_in_the_price">요금에 포함 안 됨</string>
+    <string name="tablet_room_rate_resort_fees_included_template">이번 숙박 호텔 수수료(포함됨): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="tablet_room_rate_resort_fees_not_included_template">이번 숙박 호텔 수수료(포함 안 됨): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
 
 </resources>
