--- a/project/src/main/res/values-nl/strings.xml
+++ b/project/src/main/res/values-nl/strings.xml
@@ -3020,5 +3020,12 @@
 
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">Boek hotels, vluchten en bekijk &amp; deel je reisplannen. Download vandaag nog de gratis mobiele app van Travelocity.\n%s</string>
+    <string name="fees_paid_at_hotel">Toeslagen te betalen bij hotel:</string>
+    <string name="total_due_to_expedia_today">Totaal nu te betalen aan Expedia:</string>
+    <string name="hotel_fees_for_this_stay">Hoteltoeslagen voor dit verblijf</string>
+    <string name="included_in_the_price">Inbegrepen bij de prijs</string>
+    <string name="not_included_in_the_price">Niet inbegrepen bij de prijs</string>
+    <string name="tablet_room_rate_resort_fees_included_template">Hoteltoeslagen voor dit verblijf (inbegrepen): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="tablet_room_rate_resort_fees_not_included_template">Hoteltoeslagen voor dit verblijf (niet inbegrepen): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
 
 </resources>
