--- a/project/src/main/res/values-sv/strings.xml
+++ b/project/src/main/res/values-sv/strings.xml
@@ -3020,5 +3020,12 @@
 
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">Boka flyg och hotell och se och dela dina resplaner Hämta Travelocitys gratisapp idag.\n%s</string>
+    <string name="fees_paid_at_hotel">Avgifter som betalas på hotellet:</string>
+    <string name="total_due_to_expedia_today">Totalbelopp att betala Expedia idag:</string>
+    <string name="hotel_fees_for_this_stay">Hotellavgifter för den här vistelsen</string>
+    <string name="included_in_the_price">Ingår i priset</string>
+    <string name="not_included_in_the_price">Ingår inte i priset</string>
+    <string name="tablet_room_rate_resort_fees_included_template">Hotellavgifter för den här vistelsen (ingår): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="tablet_room_rate_resort_fees_not_included_template">Hotellavgifter för den här vistelsen (ingår): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
 
 </resources>
