--- a/project/src/main/res/values-th/strings.xml
+++ b/project/src/main/res/values-th/strings.xml
@@ -3022,5 +3022,12 @@
 
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">จองโรงแรม เที่ยวบิน ดูและแชร์แผนการเดินทางของคุณ ดาวน์โหลดแอพฟรีจาก Travelocity วันนี้\n%s</string>
+    <string name="fees_paid_at_hotel">ค่าธรรมเนียมที่จ่ายที่โรงแรม:</string>
+    <string name="total_due_to_expedia_today">ยอดที่ต้องจ่ายเอ็กซ์พีเดียวันนี้:</string>
+    <string name="hotel_fees_for_this_stay">ค่าธรรมเนียมโรงแรมสำหรับการเข้าพักนี้</string>
+    <string name="included_in_the_price">รวมอยู่ในราคา</string>
+    <string name="not_included_in_the_price">ไม่รวมอยู่ในราคา</string>
+    <string name="tablet_room_rate_resort_fees_included_template">ค่าธรรมเนียมโรงแรมสำหรับการเข้าพักนี้ (รวมแล้ว): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="tablet_room_rate_resort_fees_not_included_template">ค่าธรรมเนียมโรงแรมสำหรับการเข้าพักนี้ (ยังไม่รวม): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
 
 </resources>
