--- a/project/src/main/res/values-zh-rHK/strings.xml
+++ b/project/src/main/res/values-zh-rHK/strings.xml
@@ -3020,5 +3020,12 @@
 
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">預訂酒店和機票，並查看及分享您的行程。立即下載免費的 Travelocity App 吧！\n%s</string>
+    <string name="fees_paid_at_hotel">於酒店支付的費用：</string>
+    <string name="total_due_to_expedia_today">目前應付予 Expedia 的總額：</string>
+    <string name="hotel_fees_for_this_stay">這次住宿的酒店費用</string>
+    <string name="included_in_the_price">已包含在價格內</string>
+    <string name="not_included_in_the_price">不包含在價格內</string>
+    <string name="tablet_room_rate_resort_fees_included_template">這次住宿的酒店費用 (已包含)：&lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="tablet_room_rate_resort_fees_not_included_template">這次住宿的酒店費用 (不包含)：&lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
 
 </resources>
