--- a/project/src/main/res/values-en-rGB/strings.xml
+++ b/project/src/main/res/values-en-rGB/strings.xml
@@ -3021,5 +3021,12 @@
 
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">Book hotels, flights and view &amp; share your itineraries. Download the free Travelocity mobile app today.\n%s</string>
+    <string name="fees_paid_at_hotel">Fees Paid at Hotel:</string>
+    <string name="total_due_to_expedia_today">Total Due to Expedia Today:</string>
+    <string name="hotel_fees_for_this_stay">Hotel fees for this stay</string>
+    <string name="included_in_the_price">Included in the price</string>
+    <string name="not_included_in_the_price">Not included in the price</string>
+    <string name="tablet_room_rate_resort_fees_included_template">Hotel fees for this stay (included): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="tablet_room_rate_resort_fees_not_included_template">Hotel fees for this stay (not included): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
 
 </resources>
