--- a/project/src/main/res/values-es/strings.xml
+++ b/project/src/main/res/values-es/strings.xml
@@ -3021,5 +3021,12 @@
 
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">Reserva hoteles, vuelos, y consulta y comparte tus itinerarios. Descarga la aplicación gratuita para móviles de Travelocity hoy mismo.\n%s</string>
+    <string name="fees_paid_at_hotel">Cargos con pago en el hotel:</string>
+    <string name="total_due_to_expedia_today">Total a pagar a Expedia hoy:</string>
+    <string name="hotel_fees_for_this_stay">Cargos de hotel para esta estancia</string>
+    <string name="included_in_the_price">Incluidos en el precio</string>
+    <string name="not_included_in_the_price">No incluidos en el precio</string>
+    <string name="tablet_room_rate_resort_fees_included_template">Cargos de hotel para esta estancia (incluidos): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="tablet_room_rate_resort_fees_not_included_template">Cargos de hotel para esta estancia (no incluidos): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
 
 </resources>
