--- a/project/src/main/res/values-fr-rCA/strings.xml
+++ b/project/src/main/res/values-fr-rCA/strings.xml
@@ -3021,5 +3021,12 @@
 
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">Réservez hôtels, vols, consultez et partagez vos itinéraires. Téléchargez l\&apos;appli mobile gratuite Travelocity aujourd\&apos;hui.\n%s</string>
+    <string name="fees_paid_at_hotel">Frais payés à l’hôtel :</string>
+    <string name="total_due_to_expedia_today">Montant dû aujourd’hui à Expedia :</string>
+    <string name="hotel_fees_for_this_stay">Frais d’hôtel pour ce séjour</string>
+    <string name="included_in_the_price">Compris dans le prix</string>
+    <string name="not_included_in_the_price">Non compris dans le prix</string>
+    <string name="tablet_room_rate_resort_fees_included_template">Frais d’hôtel pour ce séjour (compris) : &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="tablet_room_rate_resort_fees_not_included_template">Frais d’hôtel pour ce séjour (non compris) : &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
 
 </resources>
