--- a/project/src/main/res/values-fr/strings.xml
+++ b/project/src/main/res/values-fr/strings.xml
@@ -3021,5 +3021,12 @@
 
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">Réservez des hôtels et des billets d\&apos;avion. Consultez et partagez vos voyages. Téléchargez l\&apos;appli gratuite Travelocity !\n%s</string>
+    <string name="fees_paid_at_hotel">Frais d’hôtel à régler sur place :</string>
+    <string name="total_due_to_expedia_today">Total dû à Expedia aujourd’hui :</string>
+    <string name="hotel_fees_for_this_stay">Frais d’hôtel pour ce séjour</string>
+    <string name="included_in_the_price">Inclus dans le prix</string>
+    <string name="not_included_in_the_price">Non inclus dans le prix</string>
+    <string name="tablet_room_rate_resort_fees_included_template">Frais d’hôtel pour ce séjour (inclus) : &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="tablet_room_rate_resort_fees_not_included_template">Frais d’hôtel pour ce séjour (non inclus) : &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
 
 </resources>
