--- a/project/src/main/res/values-it/strings.xml
+++ b/project/src/main/res/values-it/strings.xml
@@ -3021,5 +3021,12 @@
 
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">Prenota hotel, voli e visualizza e condividi i tuoi itinerari. Scarica subito l\&apos;app gratuita di Travelocity per dispositivi mobili.\n%s</string>
+    <string name="fees_paid_at_hotel">Costi pagati in hotel:</string>
+    <string name="total_due_to_expedia_today">Totale dovuto oggi a Expedia:</string>
+    <string name="hotel_fees_for_this_stay">Costi hotel per questo soggiorno</string>
+    <string name="included_in_the_price">Inclusi nel prezzo</string>
+    <string name="not_included_in_the_price">Non inclusi nel prezzo</string>
+    <string name="tablet_room_rate_resort_fees_included_template">Costi hotel per questo soggiorno (inclusi): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="tablet_room_rate_resort_fees_not_included_template">Costi hotel per questo soggiorno (non inclusi): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
 
 </resources>
