--- a/project/src/main/res/values-pt-rBR/strings.xml
+++ b/project/src/main/res/values-pt-rBR/strings.xml
@@ -3021,5 +3021,12 @@
 
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">Reserve hotéis, voos, veja e compartilhe itinerários. Baixe hoje o app grátis da Travelocity.\n%s</string>
+    <string name="fees_paid_at_hotel">Taxas pagas ao hotel:</string>
+    <string name="total_due_to_expedia_today">Total devido para a Expedia hoje:</string>
+    <string name="hotel_fees_for_this_stay">Taxas do hotel para esta estadia</string>
+    <string name="included_in_the_price">Incluídas no preço</string>
+    <string name="not_included_in_the_price">Não incluídas no preço</string>
+    <string name="tablet_room_rate_resort_fees_included_template">Taxas do hotel para esta estadia (incluídas): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="tablet_room_rate_resort_fees_not_included_template">Taxas do hotel para esta estadia (não incluídas): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
 
 </resources>
