--- a/project/src/main/res/values-vi/strings.xml
+++ b/project/src/main/res/values-vi/strings.xml
@@ -3021,5 +3021,12 @@
 
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">Đặt phòng khách sạn, chuyến bay; xem &amp; chia sẻ lịch trình của quý vị. Tải app Travelocity miễn phí ngay hôm nay.\n%s</string>
+    <string name="fees_paid_at_hotel">Phí thanh toán tại Khách sạn:</string>
+    <string name="total_due_to_expedia_today">Tổng phí thanh toán cho Expedia hôm nay:</string>
+    <string name="hotel_fees_for_this_stay">Phí khách sạn cho kỳ lưu trú này</string>
+    <string name="included_in_the_price">Đã gồm trong giá</string>
+    <string name="not_included_in_the_price">Không gồm trong giá</string>
+    <string name="tablet_room_rate_resort_fees_included_template">Phí khách sạn trong kỳ lưu trú này (bao gồm): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="tablet_room_rate_resort_fees_not_included_template">Phí khách sạn trong kỳ lưu trú này (không gồm): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
 
 </resources>
