--- a/project/src/travelocity/res/values/strings.xml
+++ b/project/src/travelocity/res/values/strings.xml
@@ -85,5 +85,6 @@
     <string name="tvly_password_hint">Travelocity Password</string>
     <string name="dialog_message_launch_tvly_mobile_site">Launch the Travelocity mobile website?</string>
     <string name="sorry_rooms_sold_out_tvly">Sorry, all rooms are sold out on Travelocity.</string>
-    <string name="share_template_long_ad_tvly">Book hotels, flights and view &amp; share your itineraries. Download the free Travelocity mobile app today.</string>
+    <!-- Travelocity App download link -->
+    <string name="share_template_long_ad_tvly">Book hotels, flights and view &amp; share your itineraries. Download the free Travelocity mobile app today.\n%s</string>
 </resources>
