--- a/project/src/main/res/values-in/strings.xml
+++ b/project/src/main/res/values-in/strings.xml
@@ -3020,5 +3020,12 @@
 
     <!-- Travelocity App download link -->
     <string name="share_template_long_ad_tvly">Pesan hotel, penerbangan, lalu lihat dan bagikan itinerary Anda. Download aplikasi mobile Travelocity gratis sekarang juga.\n%s</string>
+    <string name="hotel_fees_for_this_stay">Biaya hotel untuk masa inap ini</string>
+    <string name="included_in_the_price">Sudah termasuk dalam harga</string>
+    <string name="not_included_in_the_price">Belum termasuk dalam harga</string>
+    <string name="tablet_room_rate_resort_fees_included_template">Biaya hotel untuk masa inap ini (sudah termasuk): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="tablet_room_rate_resort_fees_not_included_template">Biaya hotel untuk masa inap ini (belum termasuk): &lt;font color="#666666"&gt;&lt;b&gt;%s&lt;/b&gt;&lt;/font&gt;</string>
+    <string name="fees_paid_at_hotel">Untuk Dibayar di Hotel Nanti:</string>
+    <string name="total_due_to_expedia_today">Untuk Dibayar ke Expedia Sekarang:</string>
 
 </resources>
