--- a/project/src/voyages/res/values-fr/strings.xml
+++ b/project/src/voyages/res/values-fr/strings.xml
@@ -131,7 +131,7 @@
     <string name="contact_expedia">Nous contacter</string>
 
     <!-- Label for "app support" button in info page -->
-    <string name="app_support">Aide</string>
+    <string name="app_support">Assistance pour l\&apos;app</string>
 
     <!-- Menu strings -->
     <!-- Label for "info about this app" menu item. -->
