--- a/project/src/main/res/values/strings.xml
+++ b/project/src/main/res/values/strings.xml
@@ -2010,6 +2010,19 @@
     <!-- User reviews server/parsing error -->
     <string name="user_review_unavailable">Reviews are temporarily unavailable</string>
 
+    <!-- ETP pay later info message -->
+    <string name="pay_later_info_text">Book Now, Pay Later</string>
+    <string name="etp_payment_options_text">Your hotel payment options</string>
+    <string name="etp_pay_later_option_text">Pay at hotel later</string>
+    <string name="etp_pay_later_charges_text">You will not be charged until your stay.</string>
+    <string name="etp_pay_later_currency_text">Pay the hotel directly, in the hotel\'s local currency (USD). Expedia will not charge you.</string>
+    <string name="etp_pay_later_cancellation_text">Cancellation is free, right up to the hotel\'s cancellation window.</string>
+    <string name="etp_pay_now_option_text">Pay online now</string>
+    <string name="etp_pay_now_charges_text">Expedia will process your payment details.</string>
+    <string name="etp_pay_now_currency_text">You will pay in your local currency (USD).</string>
+    <string name="etp_pay_now_cancellation_text">Cancellation is free, right up to the hotel\'s cancellation window.</string>
+    <string name="etp_select_room">Select Room</string>
+
     <!-- Room and rates list -->
     <!-- The number of nights the customer is staying at a hotel.  %d is the number of nights (e.g., "Staying 3 nights") -->
     <plurals name="staying_nights">
